Add more content to slide
I added a funny meme that made me laugh so hard. Hopefully, it makes you laugh too

--- a/_posts/0000-01-02-RYFOJE.md
+++ b/_posts/0000-01-02-RYFOJE.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Doge. Hahaha funny. corporate make big laugh
+Doge. Hahaha funny. corporate make big laugh.
 Use the left arrow to go back!
